<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y22" >

        <TextView
            android:id="@+id/music_name"
            style="@style/textTitle"
            android:layout_width="@dimen/x200"
            android:layout_height="@dimen/y30"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/music_name" />

        <ImageButton
            android:id="@+id/music_list"
            android:layout_width="@dimen/x40"
            android:layout_height="@dimen/y30"
            android:layout_marginLeft="@dimen/x10"
            android:layout_toRightOf="@id/music_name"
            android:contentDescription="@string/app_name"
            android:gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_music_list" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y15"
        android:padding="10dp" >

        <ImageView
            android:id="@+id/music_pic"
            android:layout_width="@dimen/x160"
            android:layout_height="@dimen/y120"
            android:layout_centerHorizontal="true"
            android:background="@drawable/widget_music_album_default"
            android:contentDescription="@string/app_name" />

        <com.liushuan.MediaUtil.RoundImageView
            android:id="@+id/music_people"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:scaleType="center" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x100"
        android:layout_marginTop="@dimen/y20"
        android:orientation="horizontal" >

        <TextView
            style="@style/textSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/singer" />

        <TextView
            android:id="@+id/music_singer"
            style="@style/textSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/music_singer" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x100"
        android:layout_marginTop="@dimen/y10"
        android:orientation="horizontal" >

        <TextView
            style="@style/textSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/record" />

        <TextView
            android:id="@+id/music_record"
            style="@style/textSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/music_record" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x40"
        android:layout_marginRight="@dimen/x40"
        android:layout_marginTop="@dimen/y20"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/music_cur_time"
            style="@style/textSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/music_cur_time" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/y5"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/music_end_time"
            style="@style/textSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/music_end_time" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/music_seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x35"
        android:layout_marginRight="@dimen/x35"
        android:layout_marginTop="@dimen/y6"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/x40"
        android:layout_marginRight="@dimen/x40"
        android:layout_marginTop="@dimen/y10"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/music_pre"
            android:layout_width="@dimen/x40"
            android:layout_height="@dimen/y30"
            android:contentDescription="@string/app_name"
            android:src="@drawable/widget_music_btn_pre_press" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/y5"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/music_pause"
            android:layout_width="@dimen/x40"
            android:layout_height="@dimen/y30"
            android:contentDescription="@string/app_name"
            android:src="@drawable/widget_music_btn_play_press" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/y5"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/music_next"
            android:layout_width="@dimen/x40"
            android:layout_height="@dimen/y30"
            android:contentDescription="@string/app_name"
            android:src="@drawable/widget_music_btn_next_press" />
    </LinearLayout>

</LinearLayout>