<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/music_name"
            style="@style/textTitle"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/music_name" />

        <ImageButton
            android:id="@+id/music_list"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/app_name"
            android:padding="3dp"
            android:scaleType="center"
            android:src="@drawable/abc_ic_menu_moreoverflow_mtrl_alpha" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="5dp" >

        <ImageView
            android:id="@+id/music_pic"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/widget_music_album_default"
            android:contentDescription="@string/app_name"
            android:padding="5dp"
            android:scaleType="fitCenter" />

        <com.liushuan.MediaUtil.RoundImageView
            android:id="@+id/music_people"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:scaleType="center" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            style="@style/textSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/singer" />

        <TextView
            android:id="@+id/music_singer"
            style="@style/textSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/music_singer" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            style="@style/textSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/record" />

        <TextView
            android:id="@+id/music_record"
            style="@style/textSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/music_record" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/music_cur_time"
            style="@style/textSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/music_cur_time" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="5dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/music_end_time"
            style="@style/textSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/music_end_time" />
    </LinearLayout>

    <!--
         <SeekBar
        android:id="@+id/music_seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:gravity="center" />
    -->

    <SeekBar
        android:id="@+id/music_seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="3dp"
        android:maxHeight="3dp"
        android:progressDrawable="@drawable/seekbar_bg"
        android:thumb="@drawable/thumb_bar" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/music_pre"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/app_name"
            android:src="@drawable/widget_previous_normal" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/y5"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/music_pause"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/app_name"
            android:src="@drawable/widget_play_normal" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/y5"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/music_next"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/app_name"
            android:src="@drawable/widget_next_normal" />
    </LinearLayout>

</LinearLayout>